[project]
name = "ngstrefftz"
dynamic = ["version"] #, "dependencies"]
authors = [ {name = "Paul Stocker", email = "paul.stocker@univie.ac.at"} ]
description='NGSTrefftz is an add-on to NGSolve for Trefftz methods.'
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [ "mkl>=2024.2.0", "ngsolve>=6.2.2404.post22.dev0", ]

[project.urls]
Documentation = "https://paulst.github.io/NGSTrefftz"
Repository = "https://github.com/PaulSt/ngstrefftz"

[build-system]
requires = ["ngsolve>=6.2.2404.post22.dev0",
            "setuptools>=45", "setuptools_scm[toml]>=8", "toml", "scikit-build-core>=0.3.3", "pybind11_stubgen", "cmake>=3.26.1",  
            'mkl==2024.* ; platform_system != "Darwin"', 'mkl-devel==2024.* ; platform_system != "Darwin"']
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.26.1"
ninja.version = ">=1.11"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["_version.py"]
#build-dir = "./build_py/{wheel_tag}" # local build directory - for debugging
experimental = true
# This adds ngsolve (with exact build-time version) to the dependencies
#metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"

[tool.scikit-build.cmake.define]

[tool.setuptools_scm]  # Section required
write_to = "_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
#build-verbosity = 1
skip = """
  pp*
  *_i686
  *musllinux*
  *win32
"""

[tool.cibuildwheel.linux]
repair-wheel-command = "mv {wheel} {dest_dir} && rename linux_x86_64 manylinux_2_17_x86_64.manylinux2014_x86_64 {dest_dir}/*-linux_x86_64*.whl"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET="10.15"}
repair-wheel-command = ""
archs = ["universal2"]
