[project]
name = "ngstrefftz"
dynamic = ["version"]
authors = [ {name = "Paul Stocker", email = "paul.stocker@univie.ac.at"} ]
description='NGSTrefftz is an add-on to NGSolve for Trefftz methods.'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
  "ngsolve==6.2.2506",
]


[project.urls]
Documentation = "https://paulst.github.io/NGSTrefftz"
Repository = "https://github.com/PaulSt/ngstrefftz"

[build-system]
requires = ["ngsolve==6.2.2506",
            "scikit-build-core>=0.9.0",
            "pybind11_stubgen",
            "setuptools>=45",
            "setuptools_scm>=8",
            "toml;  python_version >= '3.11'",
            "tomli>=1.1.0; python_version < '3.11'",
            "mkl==2025.* ; platform_system != 'Darwin'",
            "mkl-devel==2025.* ; platform_system != 'Darwin'"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
#metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["_version.py"]

[tool.scikit-build.cmake.define]

[tool.setuptools_scm]  # Section required
write_to = "_version.py"
local_scheme = "no-local-version"

[tool.cibuildwheel]
#build-verbosity = 1
manylinux-x86_64-image = "cerbsim/manylinux_2_28_x86_64_cuda_12.8"
skip = """
  pp*
  *_i686
  *musllinux*
  *win32
"""

[tool.cibuildwheel.linux]
repair-wheel-command = "mv {wheel} {dest_dir} && rename linux_x86_64 manylinux_2_28_x86_64.manylinux2014_x86_64 {dest_dir}/*-linux_x86_64*.whl"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET="10.15"}
repair-wheel-command = ""
archs = ["universal2"]
